--- a/index.css
+++ b/index.css
@@ -9,6 +9,18 @@ body {
   justify-content: center;
   align-items: center;
   font-size: 12px;
+  justify-content: space-evenly;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='60' height='96' viewBox='0 0 60 96'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%236200ff' fill-opacity='0.69'%3E%3Cpath d='M36 10a6 6 0 0 1 12 0v12a6 6 0 0 1-6 6 6 6 0 0 0-6 6 6 6 0 0 1-12 0 6 6 0 0 0-6-6 6 6 0 0 1-6-6V10a6 6 0 1 1 12 0 6 6 0 0 0 12 0zm24 78a6 6 0 0 1-6-6 6 6 0 0 0-6-6 6 6 0 0 1-6-6V58a6 6 0 1 1 12 0 6 6 0 0 0 6 6v24zM0 88V64a6 6 0 0 0 6-6 6 6 0 0 1 12 0v12a6 6 0 0 1-6 6 6 6 0 0 0-6 6 6 6 0 0 1-6 6z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+}
+.song-list{
+  font-size: 1.6rem;
+  list-style: none;
+  line-height: 2.6rem;
+  margin-right: 35px;
+}
+.item-list:hover{
+  cursor: pointer;
+  background-color: rgba(40, 223, 232 , 0.8);
 }
 .player-container {
   display: flex;
@@ -80,4 +92,9 @@ body {
   position: relative;
   top: 3px;
   color: rgb(129, 129, 120);
+}
+.container{
+  background-color: rgb( 238, 116, 232);
+  border-radius: 20px;
+  box-shadow: rgb(0 0 0 / 30%) 0px 15px 30px 5px;
 }
